# oxigate

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
assets/: model_prices.json
benches/: routing.rs
config/: oxigate.yaml
docs/: api.md  capabilities.md  smoke-tests.md
docs/guides/: fallback-retry.md  prometheus-metrics.md
docs/providers/: anthropic.md  azure.md  bedrock.md  gemini.md  openai-compat.md  openai.md
migrations/: 0001_initial_schema.sql
src/: cli.rs  config.rs  gateway.rs  lib.rs  lifecycle.rs
src/api/: auth.rs  chat.rs  embeddings.rs  health.rs  metrics_endpoint.rs  mod.rs  models.rs  spend.rs
src/db/: mod.rs  spend_reader.rs  spend_writer.rs
src/domain/: auth.rs  chat.rs  embedding.rs  mod.rs  ports.rs  pricing.rs  spend.rs  tool_schema.rs
src/domain/routing/: lowest_cost.rs  mod.rs  rate_limit_aware.rs  weighted_random.rs
src/middleware/: active_connections.rs  auth.rs  budget.rs  budget_scheduler.rs  global_safety.rs  hard_cap.rs  mod.rs  request_metrics.rs  tagger.rs  team_tag_budget.rs
src/observability/: metrics.rs  mod.rs
src/plugins/: mod.rs
src/providers/: health.rs  mod.rs  tool_limits.rs
src/providers/anthropic/: mod.rs  translate.rs  types.rs
src/providers/azure/: mod.rs
src/providers/bedrock/: eventstream.rs  mod.rs  signing.rs  translate.rs
src/providers/gemini/: auth.rs  mod.rs  translate.rs  types.rs
src/providers/openai/: mod.rs  types.rs  utils.rs
src/providers/openai_compat/: http.rs  mod.rs  sse.rs
src/providers/router/: fallback.rs  fallback_trace.rs  mod.rs  retry.rs  streaming.rs  tests.rs
src/redis_pool/: mod.rs
src/utils/: budget_keys.rs  cost_headers.rs  mod.rs  provider_error.rs  redis_budget.rs  sse.rs
tests/common/: containers.rs  fixtures.rs  gateway.rs  mod.rs  stub_adapter.rs  wiremock_stubs.rs
tests/integration/: auth.rs  budget_e2e.rs  budget_period_reset.rs  chat_completions_e2e.rs  concurrency.rs  db_migrations.rs  embeddings_e2e.rs  fallback_e2e.rs  gateway_e2e.rs  global_safety_e2e.rs  health_checks.rs  mod.rs  models_e2e.rs  pricing_e2e.rs  prometheus_metrics.rs  proptest_invariants.rs  redis_pool.rs  request_size_limits.rs  routing.rs  spend_e2e.rs  spend_writer.rs  stream_timeout_e2e.rs  streaming.rs  tagger_e2e.rs  team_tag_budget_e2e.rs
tests/integration/providers/: anthropic.rs  bedrock.rs  gemini.rs  mod.rs  openai.rs
tests/unit/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
